# RP_2025_ENGINEER_ROBOT

./: CMakeLists.txt  README.md  esp32.py
Applications/: Applications.cmake
Applications/00_Algorithm/: algo_crc.cpp  algo_other.cpp  algo_pid.cpp
Applications/00_Algorithm/Include/: algo_crc.hpp  algo_other.hpp  algo_pid.hpp
Applications/01_Configuration/: Configuration.cpp  Readme.md  conf_CanTxNode.cpp  conf_device.cpp  conf_interface.cpp  conf_module.cpp  conf_process.cpp
Applications/01_Configuration/Include/: Configuration.hpp  conf_CanTxNode.hpp  conf_common.hpp  conf_device.hpp  conf_interface.hpp  conf_module.hpp  conf_process.hpp
Applications/02_Interface/: Interface.cpp  inf_can.cpp  inf_spi.cpp  inf_uart.cpp  inf_usb_cdc.cpp
Applications/02_Interface/Include/: Interface.hpp  inf_can.hpp  inf_common.hpp  inf_spi.hpp  inf_uart.hpp  inf_usb_cdc.hpp
Applications/03_Device/: Device.cpp  dev_controller_link.cpp  dev_esp32.cpp  dev_referee.cpp  dev_servo.cpp  dev_vision.cpp
Applications/03_Device/BUZZER/: dev_buzzer.cpp  music_lib.cpp
Applications/03_Device/Include/: Device.hpp  dev_common.hpp  dev_controller_link.hpp  dev_esp32.hpp  dev_referee.hpp  dev_servo.hpp  dev_vision.hpp
Applications/03_Device/Include/buzzer/: dev_buzzer.hpp  music_lib.hpp
Applications/03_Device/Include/mems/: mems.hpp  mems_bmi088.hpp  mems_common.hpp
Applications/03_Device/Include/mtr/: motor.hpp  mtr_common.hpp  mtr_dji.hpp  mtr_dm.hpp  mtr_dm_mit.hpp  mtr_kt.hpp  mtr_m2006.hpp  mtr_m3508.hpp
Applications/03_Device/Include/rc/: rc_common.hpp  rc_def.hpp  rc_dr16.hpp  remote.hpp
Applications/03_Device/MEMS/: mems.cpp  mems_bmi088.cpp
Applications/03_Device/MTR/: motor.cpp  mtr_dji.cpp  mtr_dm.cpp  mtr_dm_mit.cpp  mtr_kt.cpp
Applications/03_Device/RC/: rc_dr16.cpp  remote.cpp
Applications/04_Module/: Module.cpp
Applications/04_Module/Arm/: com_end.cpp  com_joint.cpp  com_pitch1.cpp  com_pitch2.cpp  com_roll.cpp  com_yaw.cpp  mod_arm.cpp  proc_arm.cpp
Applications/04_Module/Chassis/: com_wheelset.cpp  mod_chassis.cpp  proc_chassis.cpp
Applications/04_Module/Gimbal/: com_lift_gimbal.cpp  mod_gimbal.cpp  proc_gimbal.cpp
Applications/04_Module/Include/: Module.hpp  mod_arm.hpp  mod_chassis.hpp  mod_common.hpp  mod_gimbal.hpp  mod_subgantry.hpp
Applications/04_Module/Subgantry/: com_lift_sub.cpp  com_pump.cpp  com_stretch_sub.cpp  mod_subgantry.cpp  proc_subgantry.cpp
Applications/05_System/: System.cpp
Applications/05_System/Controller_Link/: sys_controller_link.cpp
Applications/05_System/Core/: Core.cpp  control.cpp
Applications/05_System/Core/process/: proc_doghole.cpp  proc_exchange.cpp  proc_gold_ore.cpp  proc_ground_ore.cpp  proc_pop.cpp  proc_push.cpp  proc_return_drive.cpp  proc_return_origin.cpp  proc_silver_ore.cpp  proc_turnover.cpp  wait.txt
Applications/05_System/ESP32/: sys_esp32.cpp
Applications/05_System/Include/: Core.hpp  System.hpp  sys_common.hpp  sys_controller_link.hpp  sys_esp32.hpp  sys_referee.hpp  sys_remote.hpp  sys_vision.hpp
Applications/05_System/Referee/: referee_ui.cpp  sys_referee.cpp
Applications/05_System/Remote/: sys_remote.cpp
Applications/05_System/Tasks/: sys_task.cpp
Applications/05_System/Vison/: sys_vison.cpp
Applications/Module_LHK/: Module.cpp
Applications/Module_LHK/Chassis/: com_wheelset.cpp  mod_chassis.cpp  proc_chassis.cpp
Applications/Module_LHK/Gimbal/: com_pitch.cpp  mod_gimbal.cpp  proc_gimbal.cpp
Applications/Module_LHK/Include/: Module.hpp  mod_chassis.hpp  mod_common.hpp  mod_gimbal.hpp  mod_roboticarm.hpp  mod_toiletplunger.hpp
Applications/Module_LHK/RoboticArm/: com_end.cpp  com_joint.cpp  mod_roboticarm.cpp  proc_roboticarm.cpp
Applications/Module_LHK/ToiletPlunger/: com_lift.cpp  com_pump.cpp  com_stretch.cpp  mod_toiletplunger.cpp  proc_toiletplunger.cpp
Drivers/: Drivers.cmake
Drivers/BMI08x_SensorAPI/: CMakeLists.txt  README.md
Drivers/CMSIS/: CMSIS.cmake
Drivers/stm32h7xx-hal-driver/: CMakeLists.txt
Drivers/stm32h7xx-hal-driver/Src/: stm32h7xx_ll_delayblock.c
Middlewares/: Middlewares.cmake
Targets/DM-MC02/: .cproject  .mxproject  .project  DM-MC02.ioc  STM32H723VGTX_FLASH.ld  target.cmake
Targets/DM-MC02-keil/: .mxproject  DM-MC02.ioc  target.cmake
Targets/DM-MC02-keil/BSP/: FreeRTOSConfig.c  FreeRTOSConfig.h  startup.cpp
Targets/DM-MC02-keil/Core/Inc/: main.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h
Targets/DM-MC02-keil/Core/Src/: adc.c  fdcan.c  gpio.c  main.c  octospi.c  spi.c  stm32h7xx_hal_timebase_tim.c  stm32h7xx_it.c  tim.c  usart.c
Targets/DM-MC02-keil/MDK-ARM/: DM-MC02.uvguix.17525  DM-MC02.uvguix.23283  DM-MC02.uvoptx  DM-MC02.uvprojx  Semihosting.c  retarget.c  startup_stm32h723xx.s
Targets/DM-MC02-keil/MDK-ARM/DM-MC02/: DM-MC02.build_log.htm  DM-MC02.hex  DM-MC02.lnp  DM-MC02.sct  DM-MC02_DM-MC02.dep  DM-MC02_sct.Bak  adc.d  algo_crc.d  algo_other.d  algo_pid.d  algorithm.d  basicmathfunctions.d  basicmathfunctionsf16.d  bayesfunctions.d  bayesfunctionsf16.d  com_bottom_wheel.d  com_end.d  com_end_1.d  com_foreleg.d  com_hindleg.d  com_joint.d  com_left15.d  com_lift.d  com_lift_1.d  com_lift_2.d  com_lift_gimbal.d  com_lift_sub.d  com_midleg.d  com_pitch.d  com_pitch1.d  com_pitch2.d  com_pump.d  com_pump_1.d  com_roll.d  com_stretch.d  com_stretch_1.d  com_stretch_sub.d  com_traver.d  com_traverse.d  com_wheelset.d  (+177 more)
Targets/DM-MC02-keil/MDK-ARM/RTE/_DM-MC02/: RTE_Components.h
Targets/DM-MC02-keil/USB_DEVICE/App/: usbd_cdc_if.c  usbd_cdc_if.h
Targets/DM-MC02/BSP/: FreeRTOSConfig.c  FreeRTOSConfig.h  startup.cpp
Targets/DM-MC02/Core/Inc/: main.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h  tim.h
Targets/DM-MC02/Core/Src/: adc.c  crc.c  gpio.c  iwdg.c  main.c  stm32h7xx_it.c  tim.c  usart.c  usb_otg.c
Utilities/: openocd-cmsisdap-stm32h7x.cfg
