cmake_minimum_required(VERSION 3.14)

#####################################
# STM32H7xx HAL Driver
#####################################

# HAL Driver Source Files
add_library(stm32h7xx_hal_driver STATIC
            Src/stm32h7xx_hal.c
            Src/stm32h7xx_hal_adc_ex.c
            Src/stm32h7xx_hal_adc.c
            Src/stm32h7xx_hal_cec.c
            Src/stm32h7xx_hal_comp.c
            Src/stm32h7xx_hal_cortex.c
            Src/stm32h7xx_hal_crc.c
            Src/stm32h7xx_hal_cryp_ex.c
            Src/stm32h7xx_hal_cryp.c
            Src/stm32h7xx_hal_dac_ex.c
            Src/stm32h7xx_hal_dac.c
            Src/stm32h7xx_hal_dcmi.c
            Src/stm32h7xx_hal_dfsdm.c
            Src/stm32h7xx_hal_dma_ex.c
            Src/stm32h7xx_hal_dma.c
            Src/stm32h7xx_hal_dma2d.c
            Src/stm32h7xx_hal_dsi.c
            Src/stm32h7xx_hal_dts.c
            Src/stm32h7xx_hal_eth_ex.c
            Src/stm32h7xx_hal_eth.c
            Src/stm32h7xx_hal_exti.c
            Src/stm32h7xx_hal_fdcan.c
            Src/stm32h7xx_hal_flash_ex.c
            Src/stm32h7xx_hal_flash.c
            Src/stm32h7xx_hal_fmac.c
            Src/stm32h7xx_hal_gfxmmu.c
            Src/stm32h7xx_hal_gpio.c
            Src/stm32h7xx_hal_hash_ex.c
            Src/stm32h7xx_hal_hash.c
            Src/stm32h7xx_hal_hcd.c
            Src/stm32h7xx_hal_hrtim.c
            Src/stm32h7xx_hal_hsem.c
            Src/stm32h7xx_hal_i2c_ex.c
            Src/stm32h7xx_hal_i2c.c
            Src/stm32h7xx_hal_i2s_ex.c
            Src/stm32h7xx_hal_i2s.c
            Src/stm32h7xx_hal_irda.c
            Src/stm32h7xx_hal_iwdg.c
            Src/stm32h7xx_hal_jpeg.c
            Src/stm32h7xx_hal_lptim.c
            Src/stm32h7xx_hal_ltdc_ex.c
            Src/stm32h7xx_hal_ltdc.c
            Src/stm32h7xx_hal_mdios.c
            Src/stm32h7xx_hal_mdma.c
            Src/stm32h7xx_hal_mmc_ex.c
            Src/stm32h7xx_hal_mmc.c
            Src/stm32h7xx_hal_nand.c
            Src/stm32h7xx_hal_nor.c
            Src/stm32h7xx_hal_opamp_ex.c
            Src/stm32h7xx_hal_opamp.c
            Src/stm32h7xx_hal_ospi.c
            Src/stm32h7xx_hal_otfdec.c
            Src/stm32h7xx_hal_pcd_ex.c
            Src/stm32h7xx_hal_pcd.c
            Src/stm32h7xx_hal_pssi.c
            Src/stm32h7xx_hal_pwr_ex.c
            Src/stm32h7xx_hal_pwr.c
            Src/stm32h7xx_hal_qspi.c
            Src/stm32h7xx_hal_ramecc.c
            Src/stm32h7xx_hal_rcc_ex.c
            Src/stm32h7xx_hal_rcc.c
            Src/stm32h7xx_hal_rng_ex.c
            Src/stm32h7xx_hal_rng.c
            Src/stm32h7xx_hal_rtc_ex.c
            Src/stm32h7xx_hal_rtc.c
            Src/stm32h7xx_hal_sai_ex.c
            Src/stm32h7xx_hal_sai.c
            Src/stm32h7xx_hal_sd_ex.c
            Src/stm32h7xx_hal_sd.c
            Src/stm32h7xx_hal_sdram.c
            Src/stm32h7xx_hal_smartcard_ex.c
            Src/stm32h7xx_hal_smartcard.c
            Src/stm32h7xx_hal_smbus_ex.c
            Src/stm32h7xx_hal_smbus.c
            Src/stm32h7xx_hal_spdifrx.c
            Src/stm32h7xx_hal_spi_ex.c
            Src/stm32h7xx_hal_spi.c
            Src/stm32h7xx_hal_sram.c
            Src/stm32h7xx_hal_swpmi.c
            Src/stm32h7xx_hal_tim_ex.c
            Src/stm32h7xx_hal_tim.c
            Src/stm32h7xx_hal_uart_ex.c
            Src/stm32h7xx_hal_uart.c
            Src/stm32h7xx_hal_wwdg.c
            Src/stm32h7xx_ll_adc.c
            Src/stm32h7xx_ll_bdma.c
            Src/stm32h7xx_ll_comp.c
            Src/stm32h7xx_ll_cordic.c
            Src/stm32h7xx_ll_crc.c
            Src/stm32h7xx_ll_crs.c
            Src/stm32h7xx_ll_dac.c
            Src/stm32h7xx_ll_delayblock.c
            Src/stm32h7xx_ll_dma.c
            Src/stm32h7xx_ll_dma2d.c
            Src/stm32h7xx_ll_exti.c
            Src/stm32h7xx_ll_fmac.c
            Src/stm32h7xx_ll_gpio.c
            Src/stm32h7xx_ll_hrtim.c
            Src/stm32h7xx_ll_i2c.c
            Src/stm32h7xx_ll_lptim.c
            Src/stm32h7xx_ll_lpuart.c
            Src/stm32h7xx_ll_mdma.c
            Src/stm32h7xx_ll_opamp.c
            Src/stm32h7xx_ll_pwr.c
            Src/stm32h7xx_ll_rcc.c
            Src/stm32h7xx_ll_rng.c
            Src/stm32h7xx_ll_rtc.c
            Src/stm32h7xx_ll_sdmmc.c
            Src/stm32h7xx_ll_spi.c
            Src/stm32h7xx_ll_swpmi.c
            Src/stm32h7xx_ll_tim.c
            Src/stm32h7xx_ll_usart.c
            Src/stm32h7xx_ll_usb.c
            # Src/stm32h7xx_ll_utils.c
            )

# HAL Driver Include Directories
target_include_directories(stm32h7xx_hal_driver PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/Inc
                                                       ${CMAKE_CURRENT_SOURCE_DIR}/Inc/Legacy)
